# stage0_mongodb_api

./: .dockerignore  .prettierrc  CONTRIBUTING.md  CURL_EXAMPLES.md  Dockerfile  IMPLEMENTATION_PLAN.md  NEW_README.md  PLAN.md  Pipfile  README.md  REFERENCE.md  compare_schemas.py  debug_config.py  debug_data_loading.py  debug_events.py  debug_schema.py  docker-compose.yaml  harvest_test_data.py  harvested_large_sample_data.json  pyproject.toml  setup.py  temp.txt
.github/workflows/: docker-push.yml
configurator/: server.py
configurator/depricated/: config_manager.py  schema_manager.py  schema_renderer.py  schema_validator.py
configurator/routes/: config_routes.py  configuration_routes.py  database_routes.py  dictionary_routes.py  enumerator_routes.py  migration_routes.py  test_data_routes.py  type_routes.py
configurator/services/: configuration_services.py  dictionary_services.py  enumerator_service.py  template_service.py  type_services.py
configurator/utils/: config.py  configurator_exception.py  file_io.py  mongo_io.py  route_decorators.py  unlock_everything.py  version_manager.py  version_number.py
docs/: CONTRIBUTING.md  CURL_EXAMPLES.md  REFERENCE.md  advanced_collection_config.md  collection_config.md  collection_config_schema.yaml  config.md  enumerators.md  indexes.md  openapi.yaml  processing.md  schema.md  structure.md  types.md  versioning.md
src/: server.py
src/managers/: __init__.py  (+3 more)
stage0_mongodb_api/: __init__.py  server.py
tests/: CONTRIBUTING.md  Dockerfile  Pipfile  README.md  db_util.py  docker-compose.yaml  test_server.py
(+575 files in other folders)
