[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stage0_mongodb_api"
version = "0.1.0"
description = "MongoDB Schema Management API"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "pymongo",
    "pyyaml",
    "prometheus-flask-exporter",
    "stage0_py_utils"
]

[tool.setuptools]
packages = ["stage0_mongodb_api"] 